# haskell-halogen-material

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  build_minify.sh  cabal-ghcjs.project  cabal.project  halogen-material.cabal  package.json  run_fourmolu.sh  webpack.config-ci.js  webpack.config-dev.js  webpack.config-noghc.js  webpack.config.js
.github/workflows/: Dockerfile  build-deploy.yml  build.yml  deploy.yml  run_build.sh  run_build_js.sh
app/: Main.hs
dev/: index.html  style.scss
jsbits/: halogen.externs.js  halogen.js  material.js
src/Halogen/Material/: Button.externs.js  Button.hs  Button.js  Checkbox.hs  Icons.hs  List.hs  List.js  Monad.hs  RadioButton.hs  Ripple.hs  Ripple.js  Tabs.hs  Tabs.js  TextField.hs  halogen.externs.js  halogen.js
