cabal-version:      3.4
name:               haskell-halogen-material
version:            0.1.0.0
-- synopsis:
-- description:
license:            Apache-2.0
license-file:       LICENSE
author:             Mateusz Goślinowski
maintainer:         mateusz.goslinowski@gmail.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall -Wextra -Wcompat -Wincomplete-uni-patterns -Wincomplete-record-updates -Wredundant-constraints -Wmissing-home-modules -Wmissing-export-lists 
    default-extensions: 
        OverloadedStrings
        CPP
        StrictData
        DuplicateRecordFields
        NoFieldSelectors
        OverloadedRecordDot
        RecordWildCards
        NamedFieldPuns
        NoImplicitPrelude
    build-depends: 
        base, 
        protolude, 
        unliftio, 
        text, 
        containers, 
        haskell-halogen-core, 
        clay, 
        row-types,
        extra,
        uuid-types

library
    import:           warnings
    exposed-modules:  
        Halogen.Material.Button
        Halogen.Material.Icons
        Halogen.Material.List
        Halogen.Material.Monad
        Halogen.Material.Tabs
        Halogen.Material.TextField
    hs-source-dirs:   src
    default-language: GHC2024

    if arch(javascript)
        js-sources: jsbits/material.js

executable halogen-material-app
    import:           warnings
    main-is:          Main.hs
    build-depends:
        haskell-halogen-material

    hs-source-dirs:   app
    default-language: GHC2024
